Fix Overflowing Project section

--- a/src/StyleSheets/AboutSection.css
+++ b/src/StyleSheets/AboutSection.css
@@ -54,39 +54,26 @@ p{
 .education{
   margin-top: 4rem;
 }
-.grid {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  grid-template-rows: masonry;
-}
-.item{
-  background-color: black;
-}
-.grid-wrapper > div {
+
+.grid-wrapper {
 	display: flex;
+  flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+  gap: 15px;
 }
 .grid-wrapper > div > img {
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
 	border-radius: 5px;
   border:#42446E 2px solid;
 }
 
-.grid-wrapper {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-auto-rows: 200px;
-	grid-auto-flow: dense;
+.grid-wrapper > div {
+  width: 300px;
+  height: 300px;
+  margin-right: 1%;
 }
 
-.grid-wrapper .tall {
-	grid-row: span 2;
-}
+
 
